1998-11-30  Andrew T. Veliath  <andrewtv@usa.net>

	* Add per-filename state information.

	* #pragma inhibit push/pop added.  The push operation will
	increment a counter, while the pop operation decrements it.  If
	the counter is greater than zero, any module or interface declared
	during that time will be inhibited.

	* Made XPIDL interface properties a list, and moved before the
	interface keyword.
	
	* Internal flag state added.

1998-11-29  Andrew T. Veliath  <andrewtv@usa.net>

	* util.c (IDL_tree_process_forward_dcls): 
	(IDL_tree_remove_inhibits): 
	(IDL_tree_remove_empty_modules): Listen to IDLF_VERBOSE.

	* IDL.h: Add note to IDL_tree_type explaining how the enumerator
	ordering is subject to change, and order should not be hardcoded
	into programs (alternative is suggested).  Separate parse flags
	into general and syntax extension parse flags, with the latter
	starting at bit sixteen.  IDLF_VERBOSE: new parse flag.

1998-11-28  Andrew T. Veliath  <andrewtv@usa.net>

	* lexer.l, parser.y, util.c, IDL.h: Change iid_ident to
	infotag_ident (TOK_IID_IDENT -> TOK_INFOTAG), which is more unique
	in scanning, and slightly more general.

	* util.c (IDL_tree_free): Update for interface iid, and varargs.
	(IDL_tree_walk_in_order): Same.
	(IDL_type_varargs_new): New function.

	* Makefile.am: Add G_LOG_DOMAIN for libIDL.

	* lexer.l: Add XPIDL conditional token scan for TOK_VARARGS
	(...).  Add token scan for iid_ident, which is an extended version
	of a standard IDL identifier, for XPIDL IIDs.

	* parser.y: Add XPIDL IID interface tagging
	support. (interface_iid) New production, update (interface) to
	handle it. Generate error if XPIDL syntax is not enabled and an
	IID is provided. New token, TOK_IID_IDENT, iid_ident rule.

	* lexer.l: Only recognize TypeCode when IDLF_TYPECODES syntax
	flag is present.

	* IDL.h (IDLF_TYPECODES): New flag; IDLF_TYPECODES.  New type
	IDLN_TYPE_VARARGS, eventually for use with XPIDL.
